# Progra-2

Abstract Class/: CMakeLists.txt
Interface/: CMakeLists.txt
Override/: CMakeLists.txt  main.cpp
Relationship Aggregation/: CMakeLists.txt
Relationship Association/: CMakeLists.txt
Relationship Composition/: CMakeLists.txt
dataflow-binary-01/: CMakeLists.txt  README.md  metodosv2.txt
dataflow-textfiles-01/: README.md
dp-behavioral-observer/: CMakeLists.txt  README.md
dp-behavioral-strategy/: CMakeLists.txt  README.md
dp-creational-abstractfactory/: CMakeLists.txt  README.md
dp-creational-factorymethod/: CMakeLists.txt  README.md
dp-creational-singleton/: CMakeLists.txt  README.md  database.txt
dp-creational-singleton-templates/: CMakeLists.txt  db_users.txt
dp-structural-adapter/: CMakeLists.txt  README.md
dp-structural-bridge/: CMakeLists.txt  README.md
final/: main.cpp  (+1 more)
partial-test-3-asliecs/: CMakeLists.txt  README.md  makefile
partial-test-3-asliecs/files/: enfermedades.txt  pacientes.txt
partial-test-3-asliecs/src/: AnalisisBaseNitrogenada.cpp  AnalisisBaseNitrogenada.h  AnalisisConcordancia.cpp  AnalisisConcordancia.h  AnalisisEnfermedades.cpp  AnalisisEnfermedades.h  AnalisisTipo.h  ArchivoManager.cpp  ArchivoManager.h  Enfermedad.cpp  Enfermedad.h  IAnalisis.h  IOperaciones.h  Main.cpp  Paciente.cpp  Paciente.h  Persona.cpp  Persona.h  ReporteManager.cpp  ReporteManager.h
partial-test-3-asliecs/tst/: 01_CargaPacientesTest.cpp  02_CargaEnfermedadesTest.cpp  03_Analisis1.cpp  04_Analisis2.cpp  05_Analisis3.cpp  CMakeLists.txt
(+312 files in other folders)
